fix(recent-videos): adjust auto select trigger alignment

--- a/src/app/components/recent-videos/recent-videos.component.scss
+++ b/src/app/components/recent-videos/recent-videos.component.scss
@@ -87,6 +87,7 @@
 
 .paginator-page-size-select ::ng-deep .mat-mdc-select-trigger {
     justify-content: center;
+    bottom: 20%;
 }
 
 ::ng-deep .recent-videos-page-size-panel {
